# actix-web-crud

./: Cargo.toml  docker-compose.yaml
src/: database.rs  main.rs  models.rs
src/routes/posts/: delete.rs  get.rs  mod.rs  post.rs  publish.rs
